# libp2p-perf

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  run.sh
.github/: dependabot.yml
.github/workflows/: go.yml  makefile.yml  rust.yml
golang/: go.mod  go.sum  main.go
rust/: Cargo.toml  test.pk8
rust/src/: behaviour.rs  handler.rs  lib.rs  protocol.rs
src/: behaviour.rs  handler.rs  lib.rs  protocol.rs
