[package]
name = "libp2p-perf"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "*"
libp2p-yamux = "*"
futures_codec = "0.3.4"
futures = "0.3.1"
unsigned-varint = { version = "0.3", features = ["futures-codec"] }
async-std = "~1.6.2"
