[package]
name = "libp2p-perf"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.21.1", default-features = false, features = ["dns", "noise", "tcp-async-std", "yamux"] }
futures_codec = "0.4"
futures = "0.3.1"
unsigned-varint = { version = "0.5", features = ["futures-codec"] }
async-std = { version = "1.6.2", features = ["attributes"] }
bytes = "0.5.5"
structopt = "0.3"
env_logger = "0.7.1"

[dev-dependencies]

# Include debugging symbols in release binary.
[profile.release]
debug = true
