[package]
name = "libp2p-perf"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { git = "https://github.com/elenaf9/rust-libp2p/", branch = "quic/multiple-endpoints-2", version = "0.47.0", default-features = false, features = ["dns-async-std", "noise", "plaintext", "tcp-async-io", "yamux", "quic"] }
#libp2p = { path = "/home/kpp/parity/rust-libp2p" }
futures_codec = "0.4"
futures = "0.3.1"
async-std = { version = "1.6.2", features = ["attributes"] }
bytes = "1.0.1"
structopt = "0.3"
tracing-subscriber = {version = "0.3.8", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.0"

# Include debugging symbols in release binary.
[profile.release]
debug = true
