[package]
name = "libp2p-perf"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.49.0", default-features = false, features = ["dns-async-std", "noise", "plaintext", "tcp-async-io", "yamux"] }
futures_codec = "0.4"
futures = "0.3.1"
async-std = { version = "1.6.2", features = ["attributes"] }
bytes = "1.0.1"
structopt = "0.3"
env_logger = "0.9.0"
log = "0.4"

[dev-dependencies]
rand = "0.8.0"

# Include debugging symbols in release binary.
[profile.release]
debug = true
