[package]
name = "libp2p-perf"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.51.0", default-features = false, features = ["async-std", "dns", "macros", "noise", "plaintext", "rsa", "tcp", "yamux"] }
either = "1"
futures = "0.3.1"
async-std = { version = "1.12.0", features = ["attributes"] }
bytes = "1.3.0"
structopt = "0.3"
env_logger = "0.10.0"
log = "0.4"

[dev-dependencies]
rand = "0.8.0"

# Include debugging symbols in release binary.
[profile.release]
debug = true
